--- a/inc/woocommerce/css/woocommerce.css
+++ b/inc/woocommerce/css/woocommerce.css
@@ -2274,45 +2274,33 @@ body.home .navbar-color-customizer {
 .shop-item-detail ins {
     display: none;
 }
-.shopping-cart-count {
-    display: inline-block;
-    font-size: 20px;
-    color: #FFF;
-    position: relative;
+.navbar-cart .icon-basket {
+    color: #fff;
+    color: rgba(255, 255, 255, .7);
 }
-.shopping-cart-count span {
+.navbar-cart:hover .icon-basket {
+    color: rgba(255, 255, 255, 1);
+}
+.navbar-cart .cart-item-number {
     position: absolute;
-    background: #a94442;
-    border-radius: 50%;
-    line-height: 18px;
-    width: 20px;
-    height: 20px;
-    font-size: 8px;
-    text-align: center;
-    padding: 0;
-    top: -8px;
-    right: -8px;
-    padding-left: 0;
-    letter-spacing: 0;
+    background: #e5e5e5;
+    top: 8px;
+    left: 9px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    right: initial;
+    min-width: 14px;
+    width: auto;
 }
-.header-shopping-cart .amount {
-    display: inline-block;
-    color: #FFF;
-    line-height: 23px;
-    padding-left: 15px;
-    font-size: 10px;
-    letter-spacing: 1px;
-    vertical-align: top;
-}
-.header-shopping-cart {
-    float: right;
-    min-width: 125px;
-}
-.header-shopping-cart-wrap {
+
+.navbar-cart {
+    width: 26px;
+    height: 25px;
+    margin-left: 20px;
     display: table-cell !important;
     vertical-align: middle;
-    text-align: center;
-    width: 140px;
+    padding-left: 20px;
 }
 
 /* rating stars */
